// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div>
  <div
    className="pusher collapsed"
  />
  <div
    className="floating_menu collapsed"
  >
    <div
      className="inner_wrapper flex-none layout-column layout-align-space-between"
      style={Object {}}
    >
      <div
        className="flex-none layout-row menu_content closed"
      >
        <Comp
          currentUrl=""
          expand={false}
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
            }
          }
        />
      </div>
      <div>
        <hr
          style={Object {}}
        />
        <div
          className="collapse_prompt pointy"
          onClick={[Function]}
        >
          <div
            className="flex-none layout-row layout-align-start-center"
          >
            <i
              className="fa fa-angle-double-left clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
            <p
              style={Object {}}
            >
              Collapse sidebar
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div>
  <div
    className="pusher collapsed"
  />
  <div
    className="floating_menu collapsed"
  >
    <div
      className="inner_wrapper flex-none layout-column layout-align-space-between"
      style={Object {}}
    >
      <div
        className="flex-none layout-row menu_content closed"
      >
        <Comp
          currentUrl=""
          expand={false}
          theme={null}
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
            }
          }
        />
      </div>
      <div>
        <hr
          style={Object {}}
        />
        <div
          className="collapse_prompt pointy"
          onClick={[Function]}
        >
          <div
            className="flex-none layout-row layout-align-start-center"
          >
            <i
              className="fa fa-angle-double-left clip"
              style={
                Object {
                  "color": "black",
                }
              }
            />
            <p
              style={Object {}}
            >
              Collapse sidebar
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
